<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    >
    <include
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/titlePoor"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="@color/black"
        android:textSize="34sp"
        />

    <EditText
        android:id="@+id/nameOfpoor"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/location"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:onClick="SumbitAdd"
        android:text="@string/submit"
        />

</LinearLayout>