<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/black">

<FrameLayout

    android:layout_width="410dp"
    android:layout_height="410dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/phoneCon"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fax"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="24sp" />


</FrameLayout>
</LinearLayout>