<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar2" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/info"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/baseline_contact_support_24"
            />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />



        <Button
            android:id="@+id/imageButton3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/Emergency"
            android:textSize="18dp"
            android:onClick="startpoopeople"

             />

        <Button
            android:id="@+id/imageButton4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/DonateMoney"
            android:textSize="18dp"
            android:onClick="startfinancialcontribution"
             />

        <Button
            android:id="@+id/imageButton5"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="starttopvolunteer"
            android:text="@string/Top"
            android:textSize="18dp"
             />

        <Button
            android:id="@+id/imageButton6"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="startphysicaldonation"
            android:text="@string/DonateTime"
            android:textSize="18dp"
             />

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="410dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="199dp"
             />


    </LinearLayout>
</LinearLayout>