<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/black">

    <FrameLayout
        android:background="@color/white"
        android:layout_width="410dp"
        android:layout_height="410dp">

    <ListView
        android:id="@+id/listofpoor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:text="@string/add"
        android:onClick="AddPoor"
        />
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:onClick="EditPoor"
        />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:onClick="removeSelectedItem"
        />
    </LinearLayout>

</LinearLayout>