<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coverhome"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/white">
    <include
        layout="@layout/toolbar2" />

    <TextView
        android:id="@+id/adminpage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:autoText="false"
        android:gravity="center"
        android:text="@string/orgN"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="@color/black"
        android:textDirection="anyRtl"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/VolunteersMangment"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="102dp"
            android:layout_height="wrap_content"

            android:layout_weight="0"
            android:text="@string/Vol" />

        <Button
            android:id="@+id/org"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/track" />


    </LinearLayout>
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="410dp"
        android:layout_gravity="center"
        android:layout_height="560dp"
        tools:ignore="InvalidId" />



</LinearLayout>